--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "debug": "^2.1.3",
     "del": "^2.1.0",
     "express": "^4.12.3",
-    "lru-cache": "^3.2.0",
+    "lru-cache": "^4.0.1",
+    "mocha": "^3.1.2",
     "multer": "^1.1.0",
-    "object-assign": "^4.0.1"
+    "object-assign": "^4.0.1",
+    "supertest": "^2.0.1"
   },
   "devDependencies": {
     "chai": "^3.4.1",
