--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Upload files and create download links for random files with LRU policy.",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha"
+    "test": "mocha -t 100000"
   },
   "repository": {
     "type": "git",
@@ -24,19 +24,17 @@
   },
   "homepage": "https://github.com/Sanji-IO/express-filebin",
   "dependencies": {
-    "debug": "^2.1.3",
-    "del": "^2.1.0",
-    "express": "^4.12.3",
-    "lru-cache": "^4.0.1",
-    "mocha": "^3.1.2",
-    "multer": "^1.1.0",
-    "object-assign": "^4.0.1",
-    "supertest": "^2.0.1"
+    "debug": "^3.0.1",
+    "del": "^3.0.0",
+    "express": "^4.15.5",
+    "lru-cache": "^4.1.1",
+    "multer": "^1.3.0",
+    "object-assign": "^4.0.1"
   },
   "devDependencies": {
-    "chai": "^3.4.1",
-    "mocha": "^2.2.4",
-    "sinon": "^1.14.1",
-    "supertest": "^1.1.0"
+    "chai": "^4.1.2",
+    "mocha": "^3.5.3",
+    "sinon": "^3.3.0",
+    "supertest": "^2.0.1"
   }
 }
