--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/Sanji-IO/express-filebin",
   "dependencies": {
+    "aws-sdk": "^2.122.0",
+    "bluebird": "^3.5.0",
     "debug": "^3.0.1",
     "del": "^3.0.0",
     "express": "^4.15.5",
