--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "url": "https://github.com/Sanji-IO/express-filebin/issues"
   },
   "homepage": "https://github.com/Sanji-IO/express-filebin",
-  "engines" : { "node" : ">=6" },
+  "engines": {
+    "node": ">=6"
+  },
   "dependencies": {
     "aws-sdk": "^2.122.0",
     "bluebird": "^3.5.0",
     "debug": "^3.0.1",
     "del": "^3.0.0",
+    "dotenv": "^4.0.0",
     "express": "^4.15.5",
     "lru-cache": "^4.1.1",
     "multer": "^1.3.0",
@@ -37,6 +40,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^3.5.3",
+    "s3rver": "^1.0.3",
     "sinon": "^3.3.0",
     "supertest": "^2.0.1"
   }
