--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "bluebird": "^3.5.0",
     "debug": "^3.0.1",
     "del": "^3.0.0",
-    "dotenv": "^4.0.0",
     "express": "^4.15.5",
     "lru-cache": "^4.1.1",
     "multer": "^1.3.0",
@@ -39,6 +38,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "mkdirp": "^0.5.1",
     "mocha": "^3.5.3",
     "s3rver": "^1.0.3",
     "sinon": "^3.3.0",
